# PowerShell-Aliases

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: alias_manager.hpp  commands.hpp
src/: alias_manager.cpp  commands.cpp  main.cpp
